--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: young2803
+name: Seoyoung Choi
 
 # Short bio or description (displayed in the header)
 description: Student majoring in software engineering
@@ -21,7 +21,7 @@ footer-links:
   email: c0s3young@gmail.com
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: young2803.github.io
   instagram:
   linkedin:
   pinterest:
